--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 }
 
 dependencies {
+    implementation "androidx.core:core:1.9.0"
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation "androidx.fragment:fragment-ktx:1.5.5"
     implementation 'androidx.core:core-ktx:1.9.0'
