--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         android:theme="@style/Theme.MobileApps1"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
-            android:launchMode="singleInstance"
+            android:name=".ResultActivity"
             android:exported="false" />
         <activity
+            android:name=".MainActivity2"
+            android:exported="false"
+            android:launchMode="singleInstance" />
+        <activity
             android:name=".MainActivity"
-            android:launchMode="singleInstance"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
